recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:2: error: Missing closing brace `}' assumed here
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
^